--- a/style.css
+++ b/style.css
@@ -26,17 +26,35 @@ header p {
 header img {
     margin-right: 20px;
 }
+#head {
+
+}
+
+#head img {
+
+    margin-right: 4%;
+}
+.title {
+        color: rgb(246, 106, 44);
+        font-weight: bold;
+        padding-bottom: 3%;
+        margin-top: -8%;
+}
 
 section {
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: 2%;
+    margin-top: 0%;
 
 }
 map {
 
     display: inline-block;
     margin-right: 10%;
+    margin-top: -5%;
+}
+ul {
+    padding-top: 4%;
 }
 
 ul li {
@@ -44,11 +62,20 @@ ul li {
     list-style-type: none;
     text-decoration: none;
     text-align: right;
-    line-height: 1.2;
+    line-height: 1.3;
     font-weight: bold;
     font-family: sans-serif;
     color: rgb(29, 101, 209);
-    font-size: 1.3em;
+    font-size: 1.4em;
+}
+ul li a {
+    color: rgb(29, 101, 209);
+    text-decoration: none;
+}
+ul li a:hover {
+    color: rgb(246, 106, 44);
+    text-decoration: none;
+
 }
 
 footer {
